fix mainline version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ cmake_minimum_required(VERSION 2.8)
 
 project(OrthancDicomWeb)
 
-set(ORTHANC_DICOM_WEB_VERSION "0.1")
+set(ORTHANC_DICOM_WEB_VERSION "mainline")
 
 
 # Parameters of the build
