--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,7 +115,7 @@ set(CORE_SOURCES
   ${JSONCPP_SOURCES}
   ${LIBJPEG_SOURCES}
   ${LIBPNG_SOURCES}
-  ${ZLIB}
+  ${ZLIB_SOURCES}
   ${PUGIXML_SOURCES}
 
   ${ORTHANC_ROOT}/Core/ChunkedBuffer.cpp
