rename peers by servers
--HG--
branch : dev

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,7 +122,7 @@ set(CORE_SOURCES
   )
 
 add_library(OrthancDicomWeb SHARED ${CORE_SOURCES}
-  ${CMAKE_SOURCE_DIR}/Plugin/DicomWebPeers.cpp
+  ${CMAKE_SOURCE_DIR}/Plugin/DicomWebServers.cpp
   ${CMAKE_SOURCE_DIR}/Plugin/Plugin.cpp
   ${CMAKE_SOURCE_DIR}/Plugin/QidoRs.cpp
   ${CMAKE_SOURCE_DIR}/Plugin/StowRs.cpp
