renamed Dicom.h to GdcmParsedDicomFile.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,7 +119,7 @@ add_definitions(
 
 set(CORE_SOURCES
   Plugin/Configuration.cpp
-  Plugin/Dicom.cpp
+  Plugin/GdcmParsedDicomFile.cpp
 
   ${ORTHANC_ROOT}/Plugins/Samples/Common/OrthancPluginCppWrapper.cpp
   ${ORTHANC_CORE_SOURCES}
