--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ project(OrthancDicomWeb)
 set(ORTHANC_DICOM_WEB_VERSION "1.1")
 
 if (ORTHANC_DICOM_WEB_VERSION STREQUAL "mainline")
-  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "mainline")
+  # TODO - Switch to "mainline" after "transcoding" is made the new "default"
+  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "1.6.1")
   set(ORTHANC_FRAMEWORK_DEFAULT_SOURCE "hg")
 else()
   set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "1.7.0")
