--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,10 @@ project(OrthancDicomWeb)
 set(ORTHANC_DICOM_WEB_VERSION "mainline")
 
 if (ORTHANC_DICOM_WEB_VERSION STREQUAL "mainline")
-  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "mainline")
-  set(ORTHANC_FRAMEWORK_DEFAULT_SOURCE "hg")
+  # TODO - Switch to "mainline" after "transcoding" is made the new "default"
+  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "1.6.1")
 else()
-  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "1.6.0")
+  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "1.6.1")
   set(ORTHANC_FRAMEWORK_DEFAULT_SOURCE "web")
 endif()
 
