--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,10 @@ project(OrthancDicomWeb)
 set(ORTHANC_DICOM_WEB_VERSION "mainline")
 
 if (ORTHANC_DICOM_WEB_VERSION STREQUAL "mainline")
-  # cmake .. -DALLOW_DOWNLOADS=ON -DUSE_SYSTEM_GOOGLE_TEST=OFF -DUSE_SYSTEM_ORTHANC_SDK=OFF -DORTHANC_SDK_VERSION=framework -G Ninja
-  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "transcoding")  # TODO - Revert this to "mainline"
+  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "mainline")
   set(ORTHANC_FRAMEWORK_DEFAULT_SOURCE "hg")
 else()
-  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "1.6.0")
+  set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "1.6.1")
   set(ORTHANC_FRAMEWORK_DEFAULT_SOURCE "web")
 endif()
 
