--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(ORTHANC_DICOM_WEB_VERSION "mainline")
 if (ORTHANC_DICOM_WEB_VERSION STREQUAL "mainline")
   # TODO - Switch to "mainline" after "transcoding" is made the new "default"
   set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "1.6.1")
+  set(ORTHANC_FRAMEWORK_DEFAULT_SOURCE "hg")
 else()
   set(ORTHANC_FRAMEWORK_DEFAULT_VERSION "1.6.1")
   set(ORTHANC_FRAMEWORK_DEFAULT_SOURCE "web")
